<resources>
    <string name="app_name">AstroWeather</string>
    <string name="made_by">Made by:</string>
    <string name="artur_karlinski">Artur Karliński</string>
    <string name="indeks">Index: 202180</string>
    <string name="copyright">Copyright © 2018</string>
    <string name="all_rights">All Rights Reserved</string>

    <string name="clock">Clock</string>
    <string name="longitude_latitude">Longitude, Latitude</string>
    <string name="temperature_unit_farenheit"> °F</string>
    <string name="temperature_unit_celsius"> °C</string>
    <string name="wind_power_unit_mph"> mph</string>
    <string name="wind_power_unit_kmph"> km/h</string>
    <string name="weather">Weather</string>
    <string name="temper">Temper</string>
    <string name="weatherimage">WeatherImage</string>
    <string name="city">City</string>
    <string name="air">air</string>
    <string name="description">Description</string>
    <string name="country">Country</string>
    <string name="temperature">Temperature:</string>
    <string name="air_pressure">Air Pressure:</string>
    <string name="windpower">WindPower</string>
    <string name="windway">WindWay</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="visibility1">Visibility:</string>
    <string name="humidity1">Humidity:</string>
    <string name="wind_way">Wind Way:</string>
    <string name="wind_power">Wind Power:</string>
    <string name="set_as_default">SET AS DEFAULT</string>
    <string name="remove_from_database">REMOVE FROM DATABASE</string>
</resources>
