<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.20"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Creds1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/made_by"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.20"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Creds2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/artur_karlinski"
                android:textAlignment="center"
                android:textSize="36sp"
                tools:ignore="NestedWeights" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.20"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Creds3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:gravity="center_vertical"
                android:text="@string/indeks"
                android:textAlignment="center"

                android:textSize="36sp"
                tools:ignore="NestedWeights" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Creds4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:gravity="center_vertical"
                android:text="@string/copyright"
                android:textAlignment="center"

                android:textSize="36sp"
                tools:ignore="NestedWeights" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Creds5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/all_rights"
                android:textAlignment="center"
                android:textSize="36sp"
                tools:ignore="NestedWeights" />
        </LinearLayout>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>